# nl-causal-representations

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  __init__.py  args.py  cl_causal.py  conftest.py  data.py  dep_mat.py  flows.py  hsic.py  ica.py  indep_check.py  logger.py  main.py  metrics.py  mlp.py  model.py  nv.def  prob_utils.py  requirements.txt  runner.py  setup.cfg  setup.py  train.py  utils.py
.ipynb_checkpoints/: README-checkpoint.md  disentanglement-checkpoint.py  hsic-checkpoint.py  train-checkpoint.py
care_nl_ica/: __init__.py  args.py  cl_causal.py  cli.py  config.yaml  datamodules.py  dataset.py  dep_mat.py  disentanglement.py  graph_utils.py  ica.py  indep_check.py  logger.py  main.py  masked_flows.py  metric_logger.py  mlp.py  model.py  prob_utils.py  runner.py  sinkhorn.py  utils.py
cl-ica/: invertible_network_utils.py  main_mlp.py
cl_ica/: disentanglement_utils.py  encoders.py  invertible_network_utils.py  latent_spaces.py  losses.py  spaces.py
configs/: config.yaml  config_iia.yaml  cpu.yaml  cpu_cl.yaml  profile.yaml
notebooks/: analysis.py  monti_sweep_3rqfxkyl.csv  monti_sweep_3rqfxkyl.npz  monti_sweep_70zssxmx.csv  monti_sweep_70zssxmx.npz  monti_sweep_77huh2ue.csv  monti_sweep_77huh2ue.npz  sem_10d_permute_sweep_291qhry5.csv  sem_10d_permute_sweep_291qhry5.npz  sem_10d_permute_sweep_at138q9q.csv  sem_10d_permute_sweep_at138q9q.npz  sem_10d_sparse_sweep_t7rmrux1.csv  sem_10d_sparse_sweep_t7rmrux1.npz  sem_10d_sweep_7lsb5ud3.csv  sem_10d_sweep_7lsb5ud3.npz  sem_10d_sweep_i871qu61.csv  (+34 more)
src/: args.py  (+12 more)
(+139 files in other folders)
