[metadata]
name = causalnlica
version = 0.0.1
author = Patrik Reizinger, Yash Sharma
author_email = prmedia17@gmail.com
description = Causal Representation learning with Nonlinear ICA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rpatrik96/nl-causal-representations
project_urls =
    Bug Tracker = https://github.com/rpatrik96/nl-causal-representations
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
